--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                         </div>
                         <p class=" mt-3 fs-1 text-light text-center">$314.98/mo*</p>
                         <p class="fs-6 text-light text-center"> (Recurring Payment)</p>
-                     <div class="d-flex justify-content-center ms-2 me-2"> 
-                        <button class=" me-3 text-center purchase-btn border-0 rounded-pill px-5 py-1   ">Purchase-></button>
-                        <button class="  text-center share-btn border-0 rounded-pill  px-5 py-1">Share</button>
+                     <div class="d-flex justify-content-between flex-wrap ms-2 me-2"> 
+                        <button class=" h5 me-3 text-center purchase-btn border-0 rounded-pill px-3 py-2   ">Purchase-></button>
+                        <button class=" h5  text-center share-btn border-0 rounded-pill  px-5 py-2">Share</button>
                      </div>
                         <p class="text-center text-light mt-4">Previue Insurance</p>
                     </div>
